/*
 * $Id: ChangeLog,v 1.4887 2006/03/25 20:02:21 paultucker Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-03-25 16:50 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>

  * dll_pc.bat
    * reverted to save harbour.dll in bin directory, instead lib dir.

  * source\rtl\tbrowse.prg
    * reverted my last change in RefreshCurrent() method to avoid error in
      colorrect refresh. Bug reported by Dener N. da Rocha. 

  * source\rtl\transfrm.c
    ! fixed set date format to use with "@E" picture in date var.
      Bug reported by David A. M. Corona.
      See notes for diferent date format convertions between xHarbour and
      Clipper for set date ANSI/JAPAN, at line 477 of transfrm.c file. 

  * source\rtl\tget.prg
    + created static function InvertDwM() to invert day with month in date
      var type to use with "@E" picture.

  * source\rtl\tgetlist.prg
    * changed DateMsg() method to repos the cursor at home position of the get
      after display the message "Invalid date" at scoreboard. Note that the
      previous value of the get is not restored as Clipper does. 

2006-03-25 15:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makefile.gc
  * makefile.dc
  * makefile.vc
  * makefile.wc
    - optcon*.lib
    - optgui*.lib
  * bin\bld.bat
    + sixcdx.lib for msvc

2006-03-26 01:20 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  * contrib/wvtgui/hbgtwvt.h
    ! Parallel with source/rtl/gtwvt/gtwvt.h.

2006-03-26 01:10 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  * source/rtl/gtwvt/gtwvt.c
  * source/rtl/gtwvt/gtwvt.h
    ! Replace
      IPicture * HB_EXPORT hb_wvt_gtLoadPicture
      with
      HB_EXPORT IPicture * hb_wvt_gtLoadPicture
      to satisfy MSVC 6.0 compiling in DLL mode, as tested by Marek Paliwoda.

  * contrib/gtwvw/gtwvw.c
  * contrib/gtwvw/hbgtwvw.h